# rag-system-pcos

./: .gitignore  LICENSE  pyproject.toml
data/: PCOS_2.docx  PCOS_3.txt  PCOS_4.txt
experiments/: 01_LLM_Setup.ipynb  02_Embeddings.ipynb  03_Loading_and_Chunking.ipynb  04_Basic_Retrieval_RAG.ipynb  data_ingestion.ipynb
